--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html> 
 <html lang="en">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <link rel="stylesheet" href="assets/css/styles.css"> 
+
+        <!-- Specifies the text ("title") that appears on the browser tab for the website -->
+        <title>Augusto's Portfolio Website</title> 
 
     </head>
     <body>
