--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
         <link rel="stylesheet" href="assets/css/styles.css"> 
 
+        <!-- specifies the text ("title") in the browser tab for the webstie -->
         <title>Augusto's Portfolio Website</title> 
 
     </head>
