--- a/index.html
+++ b/index.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html> 
 <html lang="en">
+
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link rel="stylesheet" href="assets/css/styles.css"> 
+        
+        <!-- Boxicons Library -->
+        <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
 
         <!-- specifies the text ("title") in the browser tab for the webstie -->
         <title>Augusto's Portfolio Website</title> 
-
     </head>
+
     <body>
 
+        <main class="1-main">
+        
+        </main>
+
+
+        <!-- ScrollReveal JS Library -->
+        <script src="https://unpkg.com/scrollreveal"></script>
+
+        <script> src="assets/js/main.js"</script>
     </body>
 </html>
