--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </head>
 
     <body>
-        <header class="1-header">
+        <header class="l-header">
             <nav class="nav bd-grid">
 
                 <div>
@@ -33,10 +33,9 @@
 
                 </div>
 
-                <div>
-
+                <div class="nav__toggle" id="nav-toggle">
+                    <i class="bx bx-menu"></i>
                 </div>
-
 
             </nav>
         </header>
@@ -50,6 +49,6 @@
         <!-- ScrollReveal JS Library -->
         <script src="https://unpkg.com/scrollreveal"></script>
 
-        <script> src="assets/js/main.js"</script>
+        <script src="assets/js/main.js"></script>
     </body>
 </html>
