--- a/index.html
+++ b/index.html
@@ -17,11 +17,9 @@
     <body>
         <header class="l-header">
             <nav class="nav bd-grid">
-
                 <div>
                     <a href="#" class="nav__logo">Augusto</a>
                 </div>
-
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item"><a href="#home"class="nav__link active" >Home</a></li>
@@ -30,9 +28,9 @@
                         <li class="nav__item"><a href="#work"class="nav__link" >Work</a></li>
                         <li class="nav__item"><a href="#contact"class="nav__link" >Contact</a></li>
                     </ul>
-
                 </div>
-
+                
+                <!-- sandwich icon that toggles the menu options-->
                 <div class="nav__toggle" id="nav-toggle">
                     <i class="bx bx-menu"></i>
                 </div>
@@ -42,7 +40,43 @@
 
 
         <main class="1-main">
-        
+
+            <section class="home bd-grid" id="home"> 
+
+                <div class="home__data">
+                    <h1 class="home__title">Hi, <br>I'm <span class="home__title-color">Augusto</span></br>Full Stack Web Developer</h1>
+                    <a href="#" class="button"> Contact </a>
+                </div>
+
+                <div class="home__social">
+                    <a href="#" class="home__social-icon"><i class='bx bxl-linkedin-square'></i></a>
+                    <a href="#" class="home__social-icon"><i class='bx bxl-github' ></i></a>
+
+                </div>
+
+                <div class="home__img">
+                    <!-- image needs to be loaded locally from within src attribute -->
+                    <!-- <img src="" alt="profile picture"> -->
+                </div>
+
+            </section>
+
+            <section class="about section" id="about">
+                <h2 class="section-title">About</h2>
+
+                <div class="about__container bd-grid">
+                    <div class="about__img"> 
+                        <!-- <img src="" alt=""> -->
+                    </div>
+
+                    <div> 
+                        <h2 class="about__subtitle">I'm Augusto</h2> 
+                        <p class="about__text">About me goes here!</p>
+                    </div>
+                </div>
+
+            </section >
+
         </main>
 
 
