--- a/index.html
+++ b/index.html
@@ -74,8 +74,73 @@
                         <p class="about__text">About me goes here!</p>
                     </div>
                 </div>
-
             </section >
+
+            <section class="skills section" id="skills">
+                <h2 class="section-title"> Skills </h2>
+
+                <div class="skills__container bd-grid">
+                    <div>
+                        <h2 class="skills__subtitle">Professional Skills</h2>
+                        <p class="skills__text">skills skills skills </p>  
+
+                        <div class="skills__data">
+                            <div class="skills__names">
+                                <i class='bx bxl-html5' ></i>
+                                <span class="skills__name">HTML5</span>
+                            </div >
+                            <div class="skills__bar skills__html">
+
+                            </div>
+                            <div>
+                                <span class="skills__percentage">85%</span>
+                            </div>
+                        </div >
+
+                        <div class="skills__data">
+                            <div class="skills__names">
+                                <i class='bx bxl-css3' ></i>
+                                <span class="skills__name">CSS3</span>
+                            </div >
+                            <div class="skills__bar skills__css">
+
+                            </div>
+                            <div>
+                                <span class="skills__percentage">65%</span>
+                            </div>
+                        </div >
+
+                        <div class="skills__data">
+                            <div class="skills__names">
+                                <i class='bx bxl-javascript' ></i>
+                                <span class="skills__name">JAVASCRIPT</span>
+                            </div >
+                            <div class="skills__bar skills__javascript">
+
+                            </div>
+                            <div>
+                                <span class="skills__percentage">90%</span>
+                            </div>
+                        </div >
+
+                        <div class="skills__data">
+                            <div class="skills__names">
+                                <i class='bx bxl-react' ></i>
+                                <span class="skills__name">REACT</span>
+                            </div >
+                            <div class="skills__bar skills__react">
+
+                            </div>
+                            <div>
+                                <span class="skills__percentage">90%</span>
+                            </div>
+                        </div >
+
+
+
+                    </div>
+                </div >
+            </section>
 
         </main>
 
