--- a/index.html
+++ b/index.html
@@ -136,6 +136,10 @@
                             </div>
                         </div >
 
+                        <div>
+                            <!-- <img src="" alt="" class="skills__img"> -->
+                        </div> 
+
 
 
                     </div>
