--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </header>
 
 
-        <main class="1-main">
+        <main class="l-main">
 
             <section class="home bd-grid" id="home"> 
 
@@ -49,7 +49,6 @@
                 <div class="home__social">
                     <a href="#" class="home__social-icon"><i class='bx bxl-linkedin-square'></i></a>
                     <a href="#" class="home__social-icon"><i class='bx bxl-github' ></i></a>
-
                 </div>
 
                 <div class="home__img">
@@ -137,14 +136,40 @@
                             <!-- <img src="" alt="" class="skills__img"> -->
                         </div> 
 
-
-
                     </div>
+                </div >
+            </section>
+
+            <section class="work section" id="work">
+                <h2 class="section-title">Work </h2>
+                <div class="work__img">
+                    <!-- <img src="" alt=""> -->
+                </div >
+            </section>
+
+
+            <section>
+                <h2 class="section-title">Contact</h2>
+                <div class="contact__container bd-grid">
+                    <form action="" class="contact__form">
+                        <input type="text" placeholder="Name" class="contact__input">
+                        <input type="mail" placeholder="Email" class="contact__input">
+                        <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
+                        <input type="button" value="Send" class="contact__button button">
+                    </form >
                 </div >
             </section>
 
         </main>
 
+        <footer class="footer">
+            <p class="footer__title">Augusto Footer</p>
+            <div class="footer__social">
+                <a href="#" class="footer__icon"></a>
+                <a href="#" class="footer__icon"></a>
+                <a href="#" class="footer__icon"></a>
+            </div >
+        </footer>
 
         <script src="https://unpkg.com/scrollreveal"></script>
 
