added href to linkedin and github

--- a/index.html
+++ b/index.html
@@ -28,14 +28,12 @@
                     </ul>
                 </div>
                 
-
                 <div class="nav__toggle" id="nav-toggle">
                     <i class="bx bx-menu"></i>
                 </div>
 
             </nav>
         </header>
-
 
         <main class="l-main">
 
@@ -47,8 +45,8 @@
                 </div>
 
                 <div class="home__social">
-                    <a href="#" class="home__social-icon"><i class='bx bxl-linkedin-square'></i></a>
-                    <a href="#" class="home__social-icon"><i class='bx bxl-github' ></i></a>
+                    <a href="https://www.linkedin.com/in/augustotibarrola/" class="home__social-icon"><i class='bx bxl-linkedin-square'></i></a>
+                    <a href="https://github.com/augustoibarrola" class="home__social-icon"><i class='bx bxl-github' ></i></a>
                 </div>
 
                 <div class="home__img">
@@ -148,7 +146,7 @@
             </section>
 
 
-            <section>
+            <section class="contact section" id="contact">
                 <h2 class="section-title">Contact</h2>
                 <div class="contact__container bd-grid">
                     <form action="" class="contact__form">
@@ -163,7 +161,7 @@
         </main>
 
         <footer class="footer">
-            <p class="footer__title">Augusto Footer</p>
+            <p class="footer__title">Footer</p>
             <div class="footer__social">
                 <a href="#" class="footer__icon"></a>
                 <a href="#" class="footer__icon"></a>
