changing design to skill decks

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
                 <div class="home__data">
                     <h1 class="home__title">Hi, <br>I'm <span class="home__title-color">Augusto</span></br>Full Stack Web Developer</h1>
-                    <a href="#" class="button"> Contact </a>
+                    <a href="#contact" class="button"> Contact </a>
                 </div>
 
                 <div class="home__social">
@@ -78,14 +78,27 @@
                         <h2 class="skills__subtitle">Professional Skills</h2>
                         <p class="skills__text">skills skills skills </p>  
 
+                        <div class="row">
+
+                            <div class="skill__column">
+                                <div class="card">
+                                    <div class="skills__names">
+                                        <i class='bx bxl-html5' ></i>
+                                        <span class="skills__name">HTML5</span>
+                                    </div >
+                                  <p>Some text</p>
+                                  <p>Some text</p>
+                                </div>
+                            </div>      
+
+                        </div>
+
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bxl-html5' ></i>
                                 <span class="skills__name">HTML5</span>
                             </div >
-                            <div class="skills__bar skills__html">
-
-                            </div>
+                            <div class="skills__bar skills__html"></div>
                             <div>
                                 <span class="skills__percentage">85%</span>
                             </div>
@@ -96,9 +109,7 @@
                                 <i class='bx bxl-css3' ></i>
                                 <span class="skills__name">CSS3</span>
                             </div >
-                            <div class="skills__bar skills__css">
-
-                            </div>
+                            <div class="skills__bar skills__css"></div>
                             <div>
                                 <span class="skills__percentage">65%</span>
                             </div>
@@ -109,9 +120,7 @@
                                 <i class='bx bxl-javascript' ></i>
                                 <span class="skills__name">JAVASCRIPT</span>
                             </div >
-                            <div class="skills__bar skills__javascript">
-
-                            </div>
+                            <div class="skills__bar skills__javascript"></div>
                             <div>
                                 <span class="skills__percentage">90%</span>
                             </div>
@@ -122,9 +131,7 @@
                                 <i class='bx bxl-react' ></i>
                                 <span class="skills__name">REACT</span>
                             </div >
-                            <div class="skills__bar skills__react">
-
-                            </div>
+                            <div class="skills__bar skills__react"></div>
                             <div>
                                 <span class="skills__percentage">90%</span>
                             </div>
