--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                 </div>
 
                 <div class="home__social">
-                    <a href="https://www.linkedin.com/in/augustotibarrola/" class="home__social-icon"><i class='bx bxl-linkedin-square'></i></a>
-                    <a href="https://github.com/augustoibarrola" class="home__social-icon"><i class='bx bxl-github' ></i></a>
+                    <a href="https://www.linkedin.com/in/augustotibarrola/" class="home__social-icon" target="_blank"><i class='bx bxl-linkedin-square'></i></a>
+                    <a href="https://github.com/augustoibarrola" class="home__social-icon" target="_blank"><i class='bx bxl-github' ></i></a>
                 </div>
 
                 <div class="home__img">
@@ -65,7 +65,9 @@
 
                     <div> 
                         <h2 class="about__subtitle">I'm Augusto</h2> 
-                        <p class="about__text">About me goes here!</p>
+                        <p class="about__text">
+                            Creativity and curiosity are two of my strongest attributes, and I tackle each new challenge with a passion that stems from a love of learning. These attributes have led me into the exciting chapter of my professional career in Full Stack Web Development, which keeps me learning every day. My background in the hospitality field has cultivated in me the perseverance and grace necessary to thrive in high-paced work environments while always maintaining a strong team spirit. I bring urgency and responsibility to all my projects to bring forward optimal results. 
+                        </p>
                     </div>
                 </div>
             </section >
@@ -80,16 +82,7 @@
 
                         <div class="row">
 
-                            <div class="skill__column">
-                                <div class="card">
-                                    <div class="skills__names">
-                                        <i class='bx bxl-html5' ></i>
-                                        <span class="skills__name">HTML5</span>
-                                    </div >
-                                  <p>Some text</p>
-                                  <p>Some text</p>
-                                </div>
-                            </div>      
+                             
 
                         </div>
 
