--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item"><a href="#home"class="nav__link active" >Home</a></li>
-                        <li class="nav__item"><a href="#about"class="nav__link" >About</a></li>
+                        <li class="nav__item"><a href="#about"class="nav__link" >Bio</a></li>
                         <li class="nav__item"><a href="#skills"class="nav__link" >Skills</a></li>
                         <li class="nav__item"><a href="#work"class="nav__link" >Work</a></li>
                         <li class="nav__item"><a href="#contact"class="nav__link" >Contact</a></li>
@@ -56,7 +56,7 @@
             </section>
 
             <section class="about section" id="about">
-                <h2 class="section-title">About</h2>
+                <h2 class="section-title">Bio</h2>
 
                 <div class="about__container bd-grid">
                     <div class="about__img"> 
