implemented getform to handle sending contact messages

--- a/index.html
+++ b/index.html
@@ -221,10 +221,10 @@
             <section class="contact section" id="contact">
                 <h2 class="section-title">Contact</h2>
                 <div class="contact__container bd-grid">
-                    <form action="" class="contact__form">
-                        <input type="text" placeholder="Name" class="contact__input">
-                        <input type="mail" placeholder="Email" class="contact__input">
-                        <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
+                    <form action="https://getform.io/f/9b92a859-9d1e-4ff8-8ac3-eba00fcd3a08" method="POST" class="contact__form">
+                        <input type="text" placeholder="Name" name="name" class="contact__input">
+                        <input type="mail" placeholder="Email" name="email" class="contact__input">
+                        <textarea name="message" id="" cols="0" rows="10" class="contact__input"></textarea>
                         <input type="submit" value="send" class="contact__button button">
                     </form >
                 </div >
