--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header class="l-header">
             <nav class="nav bd-grid">
                 <div>
-                    <a href="#" class="nav__logo">Augusto</a>
+                    <a href="#" class="nav__logo">Augusto Tomás Ibarrola-Crespin</a>
                 </div>
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
