fixed up footer

--- a/index.html
+++ b/index.html
@@ -233,11 +233,21 @@
         </main>
 
         <footer class="footer">
-            <p class="footer__title">Footer</p>
+            <!-- <p class="footer__title">Footer</p> -->
             <div class="footer__social">
-                <a href="#" class="footer__icon"></a>
-                <a href="#" class="footer__icon"></a>
-                <a href="#" class="footer__icon"></a>
+                <!-- <a href="#" class="footer__icon"></a> -->
+                <div>
+                    <a href="https://www.linkedin.com/in/augustotibarrola/" class="footer__icon" target="_blank"><i class='bx bxl-linkedin-square'></i></a>
+                </div>
+                <div>
+                    <a href="https://github.com/augustoibarrola" class="footer__icon" target="_blank"><i class='bx bxl-github' ></i></a>
+                </div>
+                <div class="footer__text">
+                    augusto.t.ibarrola@gmail.com
+                </div>
+                <div class="footer__text">
+                    201 283 6687
+                </div>
             </div >
         </footer>
 
