touched up contact section

--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
             <section class="contact section" id="contact">
                 <h2 class="section-title">Contact</h2>
                 <div class="contact__container bd-grid">
+                    <h2 class="contact__subtitle">Shoot Me A Message</h2> 
                     <form action="https://getform.io/f/9b92a859-9d1e-4ff8-8ac3-eba00fcd3a08" method="POST" class="contact__form">
                         <input type="text" placeholder="Name" name="name" class="contact__input">
                         <input type="mail" placeholder="Email" name="email" class="contact__input">
@@ -243,10 +244,13 @@
                     <a href="https://github.com/augustoibarrola" class="footer__icon" target="_blank"><i class='bx bxl-github' ></i></a>
                 </div>
                 <div class="footer__text">
-                    augusto.t.ibarrola@gmail.com
+                    201 283 6687 
                 </div>
                 <div class="footer__text">
-                    201 283 6687
+                    |
+                </div>
+                <div class="footer__text">
+                    augusto.t.ibarrola@gmail.com
                 </div>
             </div >
         </footer>
