one more to do added to README.md

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <div> 
                         <h2 class="about__subtitle">I'm Augusto</h2> 
                         <p class="about__text">
-                            Creativity and curiosity are two of my strongest attributes, and I tackle each new challenge with a passion that stems from a love of learning. These attributes have led me into the exciting chapter of my professional career in Full Stack Web Development, which keeps me learning every day. My background in the hospitality field has cultivated in me the perseverance and grace necessary to thrive in high-paced work environments while always maintaining a strong team spirit. I bring urgency and responsibility to all my projects to bring forward optimal results. 
+                            Creativity and curiosity are two of my strongest attributes, and I tackle each new challenge with a passion that stems from a love of learning. These attributes have led me into the exciting chapter of my professional career in Web Development, which keeps me learning every day. My background in the hospitality field has cultivated in me the perseverance and grace necessary to thrive in high-paced work environments while always maintaining a strong team spirit. I bring urgency and responsibility to all my projects to bring forward optimal results. 
                         </p>
                     </div>
                 </div>
