continuing to change layout

--- a/index.html
+++ b/index.html
@@ -31,16 +31,13 @@
                 <div class="nav__toggle" id="nav-toggle">
                     <i class="bx bx-menu"></i>
                 </div>
-
             </nav>
         </header>
 
         <main class="l-main">
+            <section class="home home-grid" id="home"> 
 
-            <section class="home bd-grid" id="home"> 
-
-                <div>
-
+                <div class="home__bio">
                     <div class="home__data">
                         <h1 class="home__title">Hi, <br>I'm <span class="home__title-color">Augusto</span></br>Full Stack Web Developer</h1>
                         <a href="#contact" class="button"> Contact </a>
@@ -56,13 +53,13 @@
                     <!-- </div> -->
                         
                 </div>
-                    <div class="home__bio"> 
-                        <h2 class="about__subtitle">I'm Augusto</h2> 
-                        <p>
-                            Creativity and curiosity are two of my strongest attributes, and I tackle each new challenge with a passion that stems from a love of learning. These attributes have led me into the exciting chapter of my professional career in Web Development, which keeps me learning every day. My background in the hospitality field has cultivated in me the perseverance and grace necessary to thrive in high-paced work environments while always maintaining a strong team spirit. I bring urgency and responsibility to all my projects to bring forward optimal results. 
-                        </p>
-                    </div>
-                
+
+                <div class="home__bio"> 
+                    <h2 class="about__subtitle">I'm Augusto</h2> 
+                    <p>
+                        Creativity and curiosity are two of my strongest attributes, and I tackle each new challenge with a passion that stems from a love of learning. These attributes have led me into the exciting chapter of my professional career in Web Development, which keeps me learning every day. My background in the hospitality field has cultivated in me the perseverance and grace necessary to thrive in high-paced work environments while always maintaining a strong team spirit. I bring urgency and responsibility to all my projects to bring forward optimal results. 
+                    </p>
+                </div>
 
             </section>
 
