starting to add strong tags to skill description

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                                         <h2 class="skills__title">CSS3</h2>
                                     
                                         <div class="desc">
-                                            Highly proficient in CSS Grid, Flexbox, and comfortable in frameworks such as Bootstrap, Tailwind, and Semantic-UI
+                                            Highly proficient in <strong>CSS Grid</strong>, <strong>Flexbox</strong>, as well as in frameworks like <strong>Bootstrap</strong>, <strong>Tailwind</strong>, and <strong>Semantic-UI</strong>.
                                         </div>
                
                                     </div>
