--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </header>
 
         <main class="l-main">
-            <section class="home section" id="home"> 
+            <section class="home home-section" id="home"> 
 
                 <div class="home-grid">
                     <div class="home__bio ">
@@ -228,7 +228,7 @@
                         <input type="text" placeholder="Name" name="name" class="contact__input">
                         <input type="mail" placeholder="Email" name="email" class="contact__input">
                         <textarea name="message" id="" cols="0" rows="10" class="contact__input"></textarea>
-                        <input type="submit" value="send" class="contact__button button">
+                        <input type="submit" value="send" class="contact__button button" target="_blank" >
                     </form >
                 </div >
             </section>
