--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item"><a href="#home"class="nav__link active" >Home</a></li>
-                        <li class="nav__item"><a href="#about"class="nav__link" >Bio</a></li>
                         <li class="nav__item"><a href="#skills"class="nav__link" >Skills</a></li>
-                        <li class="nav__item"><a href="#work"class="nav__link" >Work</a></li>
+                        <!-- <li class="nav__item"><a href="#work"class="nav__link" >Work</a></li> -->
                         <li class="nav__item"><a href="#contact"class="nav__link" >Contact</a></li>
                     </ul>
                 </div>
@@ -212,12 +211,12 @@
                 </div >
             </section>
 
-            <section class="work section" id="work">
+            <!-- <section class="work section" id="work">
                 <h2 class="section-title">Work </h2>
                 <div class="work__img">
                     <!-- <img src="" alt=""> -->
                 </div >
-            </section>
+            </section> -->
 
 
             <section class="contact section" id="contact">
