--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
                 <h2 class="section-title">Work </h2>
                 <div class="work__img">
                     <!-- <img src="" alt=""> -->
-                </div >
-            </section> -->
+                <!-- </div > -->
+            <!-- </section> --> 
 
 
             <section class="contact section" id="contact">
