attempting horoku testing

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                 <div class="footer__text">
                     201 283 6687 
                 </div>
-                <div class="footer__text">
+                <div class="footer__text" id="footer-divider">
                     |
                 </div>
                 <div class="footer__text">
